J'ai ajouté une bibliothèque CSS pour gestion d'une grille responsive de 4 colonnes

--- a/Sources/Responsive/CSS-Grid-Demo/css/style.css
+++ b/Sources/Responsive/CSS-Grid-Demo/css/style.css
@@ -3,6 +3,9 @@ html {
 }
 #_1_container {
 	background-color: black;
+	width: 75%;
+	margin: auto;
+	padding: 5px 15px 5px 15px;
 }
 ._1_col_1{
 	background-color: green;
